# podcaster_ui

./: .gitignore  LICENSE  Procfile  manage.py  pyproject.toml
podcaster_ui/: asgi.py  celery.py  settings.py  urls.py  views.py  wsgi.py
podcaster_ui/channel/: apps.py  forms.py  models.py  urls.py  views.py
podcaster_ui/channel/migrations/: 0001_initial.py  0002_alter_channel_name_alter_channel_url.py  0003_alter_channel_name.py  0004_channel_description.py
podcaster_ui/episode/: apps.py  models.py  tasks.py  urls.py  views.py
podcaster_ui/episode/migrations/: 0001_initial.py  0002_remove_episode_duration.py  0003_rename_chanel_episode_channel.py  0004_episode_external_guid.py  0005_alter_episode_external_guid.py  0006_alter_episode_pub_date.py  0007_alter_episode_pub_date.py
podcaster_ui/templates/: base.html  index.html
podcaster_ui/templates/channel/: channel.html  create.html  index.html  update.html
podcaster_ui/templates/episode/: index.html
podcaster_ui/utils/: tools.py
tests/: rss_test.py
