[tool.poetry]
name = "podcaster-ui"
version = "0.1.0"
description = ""
authors = ["Alexander Volosevich <sashkevich23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
python-dotenv = "^1.0.1"
rss-parser = "^2.1.0"
python-dateutil = "^2.9.0.post0"
requests = "^2.32.3"
celery = "^5.4.0"
redis = "^5.1.1"
honcho = "^2.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
